--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,6 +3,9 @@
 @import 'Home.css';
 @import 'Footer.css';
 @import 'Main.css';
+@import 'Aside.css';
+@import 'Itemlist.css';
+@import 'Item.css';
 .App {
   text-align: center;
 }
@@ -53,3 +56,8 @@ body {
   margin:     0;
   padding:    0;
 }
+
+ul {
+  list-style: none;
+}
+
