--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,6 +2,7 @@
  * main container
  */
 .container {
+    top:60px;
     margin:    60px auto;
     max-width: 1000px;
     min-width: 600px;
@@ -10,10 +11,27 @@
 /**
  * main header
  */
-.container > Header {
+.container > header {
     align-items:     center;
     background:      url('http://prophoto.com.cy/wp-content/galleries/food/food-restaurant-photographer-cyprus-10.jpg') no-repeat 50% 50%;
     background-size: 100%;
     display:         flex;
     height:          250px;
+}
+
+.container > header p {
+    border-left:  1px solid #FFFFFF;
+    font-weight:  400;
+    font-size:    2em;
+    line-height:  1em;
+    margin-left:  220px;
+    padding-left: 5px;
+}
+
+.container > header span {
+    color: #FBAF41;
+}
+
+.main-section{
+    background: #F3BB43;
 }
