--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 footer {
 
-    position:   relative;
+    position: relative;
     text-align: center;
 }
 
@@ -11,10 +11,9 @@ footer p {
 
 footer p.title {
     font-size: 1.2em;
-    padding:   15px;
+    padding: 15px;
 }
 
-
-.project-color{
-    color: rgb(11,155,70)
+.project-color {
+    color: rgb(11, 155, 70)
 }
